# ghostclaw

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.local.yml  docker-compose.vps.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
agents/mentor/: README.md  persona.md  skills.md
camoufox-mcp/: server.mjs
docker/: Dockerfile.ironclaw  Dockerfile.mentor-mcp  Dockerfile.mentor-worker  Dockerfile.sandbox  Dockerfile.voice-mcp  ironclaw-entrypoint.sh  mentor-entrypoint.sh
infra/: Caddyfile.official
mentor/: persona.md
mentor-mcp/: server.mjs
plans/: architectural-decision-mentor-platform-integration.md  architecture.md  implementation-plan.md  lippyclaw-implementation-plan.md  lippyclaw-standalone-architecture.md  voice-mcp-integration-summary.md  voice-mcp-security-implementation.md
scripts/: fish-tts-mp3.sh  ghostclaw.sh  test-media-providers.sh
src/: config.ts  errors.ts  index.ts  logger.ts  schemas.ts  types.ts  worker.ts
src/automation/: challenge-detector.ts  run-browser-job.ts
src/config/: settings.toml
src/lib/: discord.ts  openai-compatible.ts  queue.ts  slack.ts  telegram.ts  whatsapp.ts
tools/: README.md
tools/chutes_stt/: Cargo.toml  Manifest.toml
tools/chutes_stt/src/: lib.rs
tools/chutes_tts/: Cargo.toml  Manifest.toml
tools/chutes_tts/src/: lib.rs
voice-mcp/: server.mjs
